--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-llama-index==0.6.1
-transformers==4.29.0
+# transformers==4.29.0
 python-dotenv==1.0.0
+Flask==2.2.3
+Flask-Cors==3.0.10
+langchain==0.0.154
+llama-index==0.6.13
+pypdf==3.9.0
